<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".old.praktik"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#009e0f">



        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="back2"
            app:srcCompat="@drawable/ic_left_arrow_angle"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Praktik"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />
    </FrameLayout>
    <ScrollView
        android:layout_marginTop="68dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="638dp">
    <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/smartplant"
            android:textSize="35sp"
            android:textAlignment="center"
            android:textColor="#009e0f"
            />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/aplikasi_edukasi_hidroponik"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="#009e0f"
            />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:text="@string/selamat_datang"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="230dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:ems="10"
            android:gravity="start|top"
            android:text="@string/text_praktik"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/daftar_diri"
            android:textAlignment="center"
            android:textSize="12sp"
            android:background="#009e0f"
            android:onClick="btnhubungi"
            android:textColor="@android:color/white"
            android:layout_marginStart="110dp"
            android:layout_marginTop="380dp"
            />

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="12sp"
            android:background="#009e0f"
            android:textColor="@android:color/white"
            android:layout_marginStart="110dp"
            android:layout_marginTop="450dp"
            android:onClick="btnlogin"
            />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:text="@string/jika"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            />
    </FrameLayout>
    </ScrollView>

</RelativeLayout>