<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.smartplant.old.Login_Activity"
    >

<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#009e0f">



        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="back3"
            app:srcCompat="@drawable/ic_left_arrow_angle"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Login"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />
    </FrameLayout>

    <ScrollView
        android:layout_marginTop="68dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="638dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/smartplant"
            android:textAlignment="center"
            android:textColor="#009e0f"
            android:textSize="35sp" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/aplikasi_edukasi_hidroponik"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="#009e0f"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="180dp"
            android:layout_marginStart="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="270dp"
            android:layout_marginStart="20dp"
            android:hint="@string/password"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:background="#009e0f"
            android:textColor="@android:color/white"
            android:layout_marginStart="120dp"
            android:layout_marginTop="350dp"
            android:onClick="btnlogin"
            />

    </FrameLayout>
    </ScrollView>
</RelativeLayout>