<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".old.Praktik_Delapan">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#009e0f">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            tools:srcCompat="@drawable/ic_left_arrow_angle"
            android:onClick="back"
            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/praktik"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="638dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/delapan"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="278dp"
            android:layout_height="180dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="45dp"
            app:srcCompat="@mipmap/step7_foreground"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="240dp"
            android:text="@string/des_delapan_a"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="290dp"
            android:text="@string/des_delapan_b"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radioGroupNb"
            android:layout_below="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="320dp" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/waktu1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waktu2"

            />
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waktu3"

            />
        </RadioGroup>

        <Button
            android:id="@+id/Next"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="450dp"
            android:background="#009e0f"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:onClick="next"/>


        <Button
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="450dp"
            android:background="#009e0f"
            android:text="@string/before"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:onClick="back"
            />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#009e0f">

</FrameLayout>

</LinearLayout>