<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".old.katalog"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#009e0f">



        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="back1"
            app:srcCompat="@drawable/ic_left_arrow_angle"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Katalog"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />
    </FrameLayout>
    <ScrollView
        android:layout_marginTop="68dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="638dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="180dp"
            app:srcCompat="@drawable/ic_technical_support"
            android:contentDescription="@string/nutrisi"
            android:onClick="perlengkapan"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="250dp"
            android:text="@string/Perlengkapan"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:onClick="perlengkapan"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="180dp"
            app:srcCompat="@drawable/ic_salad"
            android:contentDescription="@string/kendala"
            android:onClick="tanaman"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="250dp"
            android:text="@string/Tanaman"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:onClick="tanaman"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="270dp"
            android:layout_marginTop="180dp"
            app:srcCompat="@drawable/ic_pest_observation"
            android:contentDescription="@string/pestisida_nabati"
            android:onClick="hama"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="265dp"
            android:layout_marginTop="250dp"
            android:text="@string/Hama"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:onClick="hama"
            />



    </FrameLayout>
    </ScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="720dp"
        android:background="#009e0f">

    </FrameLayout>

</RelativeLayout>